--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,18 +1,18 @@
 #     --- Examples's CMake file ---
 
-# Simple single-node master-worker MLP-MNIST example
-add_executable(mnist mnist.cpp)
+# Simple shared-memory master-worker MLP-MNIST example
+add_executable(mnist mnist/mnist.cpp)
 target_link_libraries(mnist "${TORCH_LIBRARIES}" ${CMAKE_THREAD_LIBS_INIT}) 
 target_include_directories(mnist PRIVATE
   $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/../>
   $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}>
 )
 target_compile_definitions(mnist PRIVATE DISABLE_FF_DISTRIBUTED)
-configure_file(mnist.json mnist.json COPYONLY)
+configure_file(mnist/mnist.json mnist/mnist.json COPYONLY)
 set_property(TARGET mnist PROPERTY CXX_STANDARD 20)
 
-# Simple single-node peer-to-peer MLP-MNIST example
-add_executable(mnist_p2p mnist_p2p.cpp)
+# Simple shared-memory peer-to-peer MLP-MNIST example
+add_executable(mnist_p2p mnist_p2p/mnist_p2p.cpp)
 target_link_libraries(mnist_p2p "${TORCH_LIBRARIES}" ${CMAKE_THREAD_LIBS_INIT}) 
 target_include_directories(mnist_p2p PRIVATE
   $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/../>
@@ -21,8 +21,14 @@ target_include_directories(mnist_p2p PRIVATE
 target_compile_definitions(mnist_p2p PRIVATE DISABLE_FF_DISTRIBUTED)
 set_property(TARGET mnist_p2p PROPERTY CXX_STANDARD 20)
 
+# Simple shared-memory tree-based inference example
+add_executable(mandown mandown/mandown.cpp mandown/process-frame.cpp)
+target_compile_definitions(mandown PRIVATE DISABLE_FF_DISTRIBUTED)
+set_property(TARGET mandown PROPERTY CXX_STANDARD 20)
+target_link_libraries(mandown "${TORCH_LIBRARIES}" "${OpenCV_LIBRARIES}")
+
 # Distributed master-worker MLP-MNIST example
-add_executable(mnist_dist mnist.cpp)
+add_executable(mnist_dist mnist/mnist.cpp)
 target_link_libraries(mnist_dist "${TORCH_LIBRARIES}" ${CMAKE_THREAD_LIBS_INIT})
 target_include_directories(mnist_dist PRIVATE
   $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/../>
@@ -31,10 +37,17 @@ target_include_directories(mnist_dist PRIVATE
 set_property(TARGET mnist_dist PROPERTY CXX_STANDARD 20)
 
 # Distributed peer-to-peer MLP-MNIST example
-add_executable(mnist_p2p_dist mnist_p2p.cpp)
+add_executable(mnist_p2p_dist mnist_p2p/mnist_p2p.cpp)
 target_link_libraries(mnist_p2p_dist "${TORCH_LIBRARIES}" ${CMAKE_THREAD_LIBS_INIT})
 target_include_directories(mnist_p2p_dist PRIVATE
   $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/../>
   $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}>
 )
 set_property(TARGET mnist_p2p_dist PROPERTY CXX_STANDARD 20)
+
+# Distributed-memory tree-based inference example
+add_executable(mandown_dist mandown/mandown.cpp mandown/process-frame.cpp)
+target_compile_definitions(mandown_dist PRIVATE EXCLUDE_MPI)
+target_link_libraries(mandown_dist "${TORCH_LIBRARIES}" "${OpenCV_LIBRARIES}" )
+set_property(TARGET mandown_dist PROPERTY CXX_STANDARD 20)
+
