--- a/examples/masterworker/CMakeLists.txt
+++ b/examples/masterworker/CMakeLists.txt
@@ -8,7 +8,6 @@ target_include_directories(masterworker PRIVATE
   $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}>
 )
 target_compile_definitions(masterworker PRIVATE DISABLE_FF_DISTRIBUTED)
-configure_file(masterworker.json masterworker.json COPYONLY)
 set_property(TARGET masterworker PROPERTY CXX_STANDARD 17)
 
 # Distributed master-worker MLP-masterworker example
@@ -18,5 +17,8 @@ target_include_directories(masterworker_dist PRIVATE
   $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/../>
   $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}>
 )
+configure_file(masterworker_2.json masterworker_2.json COPYONLY)
+configure_file(masterworker_4.json masterworker_4.json COPYONLY)
+configure_file(masterworker_8.json masterworker_8.json COPYONLY)
 set_property(TARGET masterworker_dist PROPERTY CXX_STANDARD 17)
 
