--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,5 +40,7 @@ endif ()
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS} -pthread")
 add_compile_definitions(NO_DEFAULT_MAPPING)
 
+#add_definitions(-DPRINT_IR)
+
 # The example folder contains the actual examples' code
 add_subdirectory(examples)
