--- a/examples/mvdet/CMakeLists.txt
+++ b/examples/mvdet/CMakeLists.txt
@@ -1,6 +1,6 @@
 #     --- mandown CMake file ---
 
-# Simple shared-memory tree-based inference example
+# Simple shared-memory mvdet-based inference with distributed processing
 add_executable(mvdet mvdet.cpp helpers.cpp)
 target_compile_definitions(mvdet PRIVATE DISABLE_FF_DISTRIBUTED)
 target_link_libraries(mvdet "${TORCH_LIBRARIES}" "${OpenCV_LIBRARIES}")
@@ -10,7 +10,7 @@ target_include_directories(mvdet PRIVATE
 )
 set_property(TARGET mvdet PROPERTY CXX_STANDARD 17)
 
-# Distributed-memory tree-based inference example
+# Distributed-memory mvdet-based inference with distributed processing
 add_executable(mvdet_dist mvdet.cpp helpers.cpp)
 target_compile_definitions(mvdet_dist PRIVATE EXCLUDE_MPI)
 target_link_libraries(mvdet_dist "${TORCH_LIBRARIES}" "${OpenCV_LIBRARIES}")
@@ -27,3 +27,19 @@ if (MPI_FOUND)
   target_include_directories(mvdet_dist  PRIVATE ${MPI_INCLUDE_PATH})
 endif()
 
+# Distributed-memory mvdet-based inference with central processing
+add_executable(mvdet_central_dist mvdet_central.cpp helpers.cpp)
+target_compile_definitions(mvdet_central_dist PRIVATE EXCLUDE_MPI)
+target_link_libraries(mvdet_central_dist "${TORCH_LIBRARIES}" "${OpenCV_LIBRARIES}")
+target_include_directories(mvdet_central_dist PRIVATE
+  $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/../>
+  $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}>
+)
+configure_file(mvdet_7_1.json mvdet_7_1.json COPYONLY)
+configure_file(mvdet_1_1.json mvdet_1_1.json COPYONLY)
+configure_file(mvdet_3_2.json mvdet_3_2.json COPYONLY)
+set_property(TARGET mvdet_central_dist PROPERTY CXX_STANDARD 17)
+if (MPI_FOUND)
+  target_link_libraries(mvdet_central_dist MPI::MPI_CXX)
+  target_include_directories(mvdet_central_dist  PRIVATE ${MPI_INCLUDE_PATH})
+endif()
