--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,10 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS} -pthread")
 add_compile_definitions(NO_DEFAULT_MAPPING)
 
 #add_definitions(-DPRINT_IR)
-add_compile_options(-g)
+add_compile_options(
+    "$<$<CONFIG:RELEASE>:-O3>"
+    "$<$<CONFIG:DEBUG>:-g>"
+)
 
 # The example folder contains the actual examples' code
 add_subdirectory(examples)
