Logging infrastructure implemented but not working correctly

--- a/python_interface/logging.conf
+++ b/python_interface/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root, model, configuration, experiment, json_generator
+keys=root, Model, Configuration, Experiment, JSONGenerator
 
 [handlers]
 keys=consoleHandler
@@ -11,25 +11,25 @@ keys=simpleFormatter
 level=DEBUG
 handlers=consoleHandler
 
-[logger_model]
+[logger_Model]
 level=DEBUG
 handlers=consoleHandler
 qualname=simpleExample
 propagate=0
 
-[logger_configuration]
+[logger_Configuration]
 level=DEBUG
 handlers=consoleHandler
 qualname=simpleExample
 propagate=0
 
-[logger_experiment]
+[logger_Experiment]
 level=DEBUG
 handlers=consoleHandler
 qualname=simpleExample
 propagate=0
 
-[logger_json_generator]
+[logger_JSONGenerator]
 level=DEBUG
 handlers=consoleHandler
 qualname=simpleExample
