Logging now works correctly

--- a/python_interface/logging.conf
+++ b/python_interface/logging.conf
@@ -14,25 +14,25 @@ handlers=consoleHandler
 [logger_Model]
 level=DEBUG
 handlers=consoleHandler
-qualname=simpleExample
+qualname=Model
 propagate=0
 
 [logger_Configuration]
 level=DEBUG
 handlers=consoleHandler
-qualname=simpleExample
+qualname=Configuration
 propagate=0
 
 [logger_Experiment]
 level=DEBUG
 handlers=consoleHandler
-qualname=simpleExample
+qualname=Experiment
 propagate=0
 
 [logger_JSONGenerator]
 level=DEBUG
 handlers=consoleHandler
-qualname=simpleExample
+qualname=JSONGenerator
 propagate=0
 
 [handler_consoleHandler]
