Logging system improved

--- a/python_interface/logging.conf
+++ b/python_interface/logging.conf
@@ -5,7 +5,7 @@ keys=root, Model, Configuration, Experiment, JSONGenerator
 keys=consoleHandler
 
 [formatters]
-keys=simpleFormatter
+keys=customFormatter
 
 [logger_root]
 level=DEBUG
@@ -38,8 +38,8 @@ propagate=0
 [handler_consoleHandler]
 class=StreamHandler
 level=DEBUG
-formatter=simpleFormatter
+formatter=customFormatter
 args=(sys.stdout,)
 
-[formatter_simpleFormatter]
-format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
+[formatter_customFormatter]
+class=custom_formatter.CustomFormatter
