--- a/python_interface/logging.conf
+++ b/python_interface/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root, Model, Configuration, Experiment, JSONGenerator
+keys=root, Model, Configuration, Experiment, JSONGenerator, Dataset
 
 [handlers]
 keys=consoleHandler
@@ -33,6 +33,12 @@ propagate=0
 level=DEBUG
 handlers=consoleHandler
 qualname=JSONGenerator
+propagate=0
+
+[logger_Dataset]
+level=DEBUG
+handlers=consoleHandler
+qualname=Dataset
 propagate=0
 
 [handler_consoleHandler]
