Starting to work on the DSL implementation - master-worker support almost there

--- a/python_interface/logging.conf
+++ b/python_interface/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root, Model, Configuration, Experiment, JSONGenerator, Dataset
+keys=root, Model, Configuration, Experiment, JSONGenerator, Dataset, Initialisation, Feedback, Parallel, Wrapper, Reduce, Broadcast
 
 [handlers]
 keys=consoleHandler
@@ -35,10 +35,46 @@ handlers=consoleHandler
 qualname=JSONGenerator
 propagate=0
 
+[logger_Broadcast]
+level=DEBUG
+handlers=consoleHandler
+qualname=Broadcast
+propagate=0
+
 [logger_Dataset]
 level=DEBUG
 handlers=consoleHandler
 qualname=Dataset
+propagate=0
+
+[logger_Initialisation]
+level=DEBUG
+handlers=consoleHandler
+qualname=Initialisation
+propagate=0
+
+[logger_Feedback]
+level=DEBUG
+handlers=consoleHandler
+qualname=Feedback
+propagate=0
+
+[logger_Parallel]
+level=DEBUG
+handlers=consoleHandler
+qualname=Parallel
+propagate=0
+
+[logger_Wrapper]
+level=DEBUG
+handlers=consoleHandler
+qualname=Wrapper
+propagate=0
+
+[logger_Reduce]
+level=DEBUG
+handlers=consoleHandler
+qualname=Reduce
 propagate=0
 
 [handler_consoleHandler]
